--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-boto3 = "^1.20.8"
-compose-x-common = "^0.2.2"
+compose-x-common = {extras = ["aws"], version = "^0.2.3"}
+boto3 = "^1.18"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b0"
@@ -26,6 +26,7 @@ coverage = "^5.5"
 pytest = "^6.2.4"
 pre-commit = "^2.14.0"
 tbump = "^6.4.0"
+placebo = "^0.10.0"
 
 [tool.black]
 line-length = 88
