--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,14 @@ classifiers = [
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-compose-x-common = {extras = ["aws"], version = "^0.2.3"}
-boto3 = "^1.18"
+compose-x-common = "^0.4.4"
+boto3 = "^1.21"
 
 [tool.poetry.dev-dependencies]
 black = "^21.11b0"
@@ -27,6 +28,7 @@ pytest = "^6.2.4"
 pre-commit = "^2.14.0"
 tbump = "^6.4.0"
 placebo = "^0.10.0"
+cleanpy = "^0.3.1"
 
 [tool.black]
 line-length = 88
