--- a/.cicd/buildspec_layer.yml
+++ b/.cicd/buildspec_layer.yml
@@ -21,11 +21,12 @@ phases:
       - if [ $USE_EPOCH -eq 1 ]; then SUFFIX=$EPOCH; fi
       - (pip --version && pip install pip -U --no-cache-dir) && pip install wheel --no-cache-dir
       - python -m pip install poetry
+      - poetry version || echo failed to find poetry
       - POETRY_BIN_FILE=`find /root/.pyenv -name poetry -type f 2>/dev/null`
       - echo $POETRY_BIN_FILE
       - POETRY_BIN_DIR=$(dirname "${POETRY_BIN_FILE}")
       - PATH=$POETRY_BIN_DIR:$PATH
-      - poetry env use system
+      - poetry env use ${PY_VERSION}
       - poetry install
       - POETRY_ENV=`poetry env info --path`
       - echo $POETRY_ENV
@@ -42,7 +43,7 @@ phases:
       - pip install $BUILD_WHL --no-cache-dir -t ${PY_BUILD}
       - cleanpy -af ${PY_BUILD}
       - zip -q -r9 layer-${SUFFIX}.zip python
-      - LAYER_FILE="layers/cfn_kafka_admin/layer-${SUFFIX}.zip"
+      - LAYER_FILE="layers/ecs_scaling_scheduler/layer-${SUFFIX}.zip"
       - cp layer-${SUFFIX}.zip layer.zip
       - S3_LAYER_UPLOAD_PATH=s3://${PUBLIC_FILES_BUCKET}/${LAYER_FILE}
 
