--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,28 +7,28 @@ license = "MPL-2.0"
 classifiers = [
   "Natural Language :: English",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
 ]
 readme = "README.rst"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-compose-x-common = "^0.4.4"
+python = "^3.8"
+compose-x-common = "^1.2"
 boto3 = "^1.21"
 
 [tool.poetry.dev-dependencies]
-black = "^21.11b0"
+black = "^23.1"
 isort = "^5.9.3"
-flake8 = "^3.9.2"
-coverage = "^5.5"
-pytest = "^6.2.4"
-pre-commit = "^2.14.0"
-tbump = "^6.4.0"
+coverage = "^6.5"
+pytest = "^7.1"
+pre-commit = "^3.1"
+tbump = "^6.9"
 placebo = "^0.10.0"
 cleanpy = "^0.3.1"
+pyupgrade = "^3.0.0"
 
 [tool.black]
 line-length = 88
